syntax = "proto3";

package gobroke;

option go_package = "github.com/A13xB0/GoBroke/proto";

// RedisMessage represents a message that will be serialized and sent through Redis.
message RedisMessage {
  string instance_id = 1;    // Source instance ID to prevent message loops
  string message_uuid = 2;   // Original message UUID
  repeated string to_client_ids = 3;  // Target client UUIDs
  repeated string to_logic = 4;       // Target logic names
  string from_client_id = 5;  // Source client UUID, if applicable
  string from_logic = 6;      // Source logic name, if applicable
  bytes message_raw = 7;      // Raw message payload
  map<string, TypedValue> metadata = 8;  // Message metadata with type information
  map<string, TypedValue> tags = 9;      // Message tags with type information
}

// TypedValue represents a value with its type information.
message TypedValue {
  // The type of the value
  enum ValueType {
    STRING = 0;
    INT = 1;
    FLOAT = 2;
    BOOL = 3;
    BYTES = 4;
    MAP = 5;
    ARRAY = 6;
    NULL = 7;
  }
  
  ValueType type = 1;  // The type of the value
  bytes value = 2;     // The serialized value
}
